fixed small rendering bug on iPhone X

--- a/main.css
+++ b/main.css
@@ -74,6 +74,7 @@ form {
 
 fieldset {
     display: flex;
+    flex-direction: column;
     text-align: center;
     border: 2px solid #222F3F;
     border-radius: 3px;
